# docs/swagger.yaml
@@ -49,15 +49,6 @@ definitions:
     required:
     - email
     type: object
-  dto.RefreshTokenRequest:
-    properties:
-      refresh_token:
-        type: string
-      user_id:
-        type: string
-    required:
-    - refresh_token
-    type: object
   dto.RemoveUserRequest:
     properties:
       user_id:
@@ -310,42 +301,6 @@ info:
   title: PMT API
   version: "1.0"
 paths:
-  /Organizations/update:
-    patch:
-      consumes:
-      - application/json
-      description: Updates Organization profile.
-      parameters:
-      - description: Update Organization Request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/dto.UpdateOrganizationRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.SuccessResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: Update Organization
-      tags:
-      - Organizations
   /auth/change-password:
     post:
       consumes:
@@ -377,8 +332,6 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      security:
-      - BearerAuth: []
       summary: Change password
       tags:
       - Authentication
@@ -400,8 +353,6 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      security:
-      - BearerAuth: []
       summary: Logout user
       tags:
       - Authentication
@@ -428,8 +379,6 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      security:
-      - BearerAuth: []
       summary: Get current user
       tags:
       - Users
@@ -498,13 +447,6 @@ paths:
       consumes:
       - application/json
       description: Generates a new access token using the refresh token.
-      parameters:
-      - description: refresh token
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/dto.RefreshTokenRequest'
       produces:
       - application/json
       responses:
@@ -525,8 +467,6 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      security:
-      - BearerAuth: []
       summary: Refresh access token
       tags:
       - Authentication
@@ -634,8 +574,6 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      security:
-      - BearerAuth: []
       summary: Update user
       tags:
       - Users
@@ -696,8 +634,6 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      security:
-      - BearerAuth: []
       summary: delete current Organization
       tags:
       - Organizations
@@ -724,8 +660,6 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      security:
-      - BearerAuth: []
       summary: Get current Organization
       tags:
       - Organizations
@@ -752,8 +686,6 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      security:
-      - BearerAuth: []
       summary: Get current Organization
       tags:
       - Organizations
@@ -784,9 +716,41 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      security:
-      - BearerAuth: []
       summary: Accept organization invitation
+      tags:
+      - Organizations
+  /organization/update:
+    patch:
+      consumes:
+      - application/json
+      description: Updates Organization profile.
+      parameters:
+      - description: Update Organization Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateOrganizationRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Update Organization
       tags:
       - Organizations
   /organization/user-status/:
@@ -820,8 +784,6 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      security:
-      - BearerAuth: []
       summary: Update User Status
       tags:
       - Organizations
@@ -856,8 +818,6 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      security:
-      - BearerAuth: []
       summary: RemoveUser
       tags:
       - Organizations
@@ -892,14 +852,11 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      security:
-      - BearerAuth: []
       summary: Update User Role
       tags:
       - Organizations
 securityDefinitions:
   BearerAuth:
-    description: 'Enter your JWT token in the format: Bearer <your-token>'
     in: header
     name: Authorization
     type: apiKey
